pvc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  containers:
  - image: mysql:8
    name: mysql
    ports:
    - containerPort: 3306
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-vol
  volumes:
  - name: mysql-vol
    persistentVolumeClaim:
      claimName: mysql-pvc
