htppd-svc.yaml
---
apiVersion: v1 
kind: Service
metadata:
  name: httpd-svc
spec:
  ports:
  - nodePort: 30114
    port: 8081
    targetPort: 80 
  selector:
    app: httpd
    version: "1.0"  
  type: NodePort
